[gd_scene load_steps=3 format=3 uid="uid://cuqvstsupfq15"]

[ext_resource type="PackedScene" uid="uid://djcikb4rxgrvt" path="res://custom_controls/color_picker/ColorPicker.tscn" id="1_7nefi"]
[ext_resource type="Script" path="res://entities/player/ui/PlayerEntityUI.gd" id="1_e2j53"]

[node name="PlayerEntityUI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e2j53")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PlayerID" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="Label" type="Label" parent="Layout/PlayerID"]
layout_mode = 2
text = "Player ID:"

[node name="SBoxPlayerID" type="SpinBox" parent="Layout/PlayerID"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 1.0
alignment = 1

[node name="Label" type="Label" parent="Layout"]
layout_mode = 2
text = "Player Color:"

[node name="ColorPicker" parent="Layout" instance=ExtResource("1_7nefi")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[connection signal="value_changed" from="Layout/PlayerID/SBoxPlayerID" to="." method="_on_sbox_player_id_value_changed"]
[connection signal="changed" from="Layout/ColorPicker" to="." method="_on_color_picker_changed"]
